[gd_scene load_steps=2 format=3 uid="uid://cr8v0ucjsrhh0"]

[ext_resource type="Script" uid="uid://bppcta3eu0k4n" path="res://src/menus/luck_bar.gd" id="1_gtbfu"]

[node name="LuckBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtbfu")

[node name="PositiveBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Label" type="Label" parent="PositiveBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "0"

[node name="NegativeBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Label" type="Label" parent="NegativeBar"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
text = "-100"
